2004-06-17  Ian Lance Taylor  <ian@wasabisystems.com>

	PR middle-end/16038
	Backport from mainline:
	Fri Apr  4 17:43:52 2003  Olivier Hainque <hainque@act-europe.fr>

	* emit-rtl.c (get_mem_attrs): Adjust alignment tests determining
	use of default attributes to agree MEM_ALIGN macro.

2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-31  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/15693
	* config/sparc/sparc.c (compare_operand): New predicate.
	* config/sparc/sparc.h (PREDICATE_CODES): Add it.
	* config/sparc/sparc.md (cmpsi expander): Use it.  If the first
	operand is a ZERO_EXTRACT and the second operand is not zero,
	force the former to a register.
	(cmpdi expander): Likewise.

2004-05-29  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/13653
	* loop.c (loop_givs_rescan): When reducing a non-replaceable giv,
	clear the RTX_UNCHANGING_P flag.

2004-05-28  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR bootstrap/14671
	* alias.c (init_alias_analysis): Allocate alias_invariant array with
	ggc_alloc_cleared instead of xrealloc.
	(end_alias_analysis): Don't free alias_invariant.

2004-05-27  Richard Henderson  <rth@redhat.com>

	Backport from mainline:
	2004-01-19  Richard Henderson  <rth@redhat.com>
        * alpha.md (UNSPEC_NT_LDA): Renumber.
        (UNSPEC_CVTLQ, cvtlq): New.
        (extendsidi2_1): Rename from extendsidi2_nofix; remove f/f.
        (extendsidi2_fix): Remove.
        (extendsidi2 splitter): Use cvtlq.
        (extendsidi2 fp peepholes): Remove.
        (cvtql): Use SFmode instead of SImode.
        (fix_trunc?fsi): Update to match.
        (floatsisf2_ieee, floatsisf2, floatsidf2_ieee, floatsidf2): New.
        (movsi): Rename from movsi_nofix, remove f alternatives.
        (movsi_nt_vms): Similarly.
        (movsi_fix, movsi_nt_vms_fix): Remove.

2004-05-26  Hans-Peter Nilsson  <hp@axis.com>

	PR optimization/15296
	* reorg.c (fill_simple_delay_slots): Use next_real_insn when